--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                 </ul>
-                <a class="d-block mt-4 text-muted"href="#">Copyright © 2023. All rights reserved by EchoFlick</a>
+                <a class="d-block mt-4 text-muted"href="#">Copyright © 2023. All rights reserved by EchoFlick.</a>
             </div>
             <div class="col-md-9 col-xl-10 main-panel bg-white">
                 <div class="main-panel-wrapper">
